log/build_2026-01-28_17-38-28/perception_pkg/stdout_stderr.log
-- Found ament_cmake: 1.3.12 (/opt/ros/humble/share/ament_cmake/cmake)
-- Override CMake install command with custom implementation using symlinks instead of copying resources
-- Found rclcpp: 16.0.17 (/opt/ros/humble/share/rclcpp/cmake)
-- Found rosidl_generator_c: 3.1.8 (/opt/ros/humble/share/rosidl_generator_c/cmake)
-- Found rosidl_adapter: 3.1.8 (/opt/ros/humble/share/rosidl_adapter/cmake)
-- Found rosidl_generator_cpp: 3.1.8 (/opt/ros/humble/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 6.1.2 (/opt/ros/humble/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 6.2.9 (/opt/ros/humble/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found rclpy: 3.3.19 (/opt/ros/humble/share/rclpy/cmake)
-- Found sensor_msgs: 4.9.0 (/opt/ros/humble/share/sensor_msgs/cmake)
-- Found cv_bridge: 3.2.1 (/opt/ros/humble/share/cv_bridge/cmake)
-- Found image_transport: 3.1.12 (/opt/ros/humble/share/image_transport/cmake)
-- Found ament_lint_auto: 0.12.14 (/opt/ros/humble/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: $<BUILD_INTERFACE:/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/include>
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'flake8' to check Python code syntax and style conventions
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'pep257' to check Python code against some of the docstring style conventions in PEP 257
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/deepblue/ros2_autonomous_cpp/build/perception_pkg
Consolidate compiler generated dependencies of target perception_common
[ 33%] Built target perception_common
[ 66%] Building CXX object CMakeFiles/obstacle_detection_node.dir/src/obstacle_detection_node.cpp.o
[ 66%] Building CXX object CMakeFiles/lane_tracking_node.dir/src/lane_tracking_node.cpp.o
[ 66%] Building CXX object CMakeFiles/lane_marking_node.dir/src/lane_marking_node.cpp.o
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘void perception_pkg::LaneMarkingNode::compressedCallback(sensor_msgs::msg::CompressedImage_<std::allocator<void> >::SharedPtr)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:93:29: error: ‘imdecode’ is not a member of ‘cv’
   93 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                             ^~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:93:62: error: ‘IMREAD_COLOR’ is not a member of ‘cv’
   93 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                                                              ^~~~~~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp: In member function ‘void perception_pkg::LaneTrackingNode::compressedCallback(sensor_msgs::msg::CompressedImage_<std::allocator<void> >::SharedPtr)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp:68:29: error: ‘imdecode’ is not a member of ‘cv’
   68 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                             ^~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_tracking_node.cpp:68:62: error: ‘IMREAD_COLOR’ is not a member of ‘cv’
   68 |         cv::Mat frame = cv::imdecode(cv::Mat(msg->data), cv::IMREAD_COLOR);
      |                                                              ^~~~~~~~~~~~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘perception_pkg::LineStyle perception_pkg::LaneMarkingNode::estimateStyle(const cv::Mat&, const std::vector<int>&, const std::vector<int>&)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:249:66: warning: unused parameter ‘ys’ [-Wunused-parameter]
  249 |                                          const std::vector<int>& ys) {
      |                                          ~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp: In member function ‘perception_pkg::StopLine perception_pkg::LaneMarkingNode::detectStopLine(const cv::Mat&, int)’:
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:268:9: warning: unused variable ‘w’ [-Wunused-variable]
  268 |     int w = frame.cols;
      |         ^
/home/deepblue/ros2_autonomous_cpp/src/perception_pkg/src/lane_marking_node.cpp:266:68: warning: unused parameter ‘roi_y’ [-Wunused-parameter]
  266 | StopLine LaneMarkingNode::detectStopLine(const cv::Mat& frame, int roi_y) {
      |                                                                ~~~~^~~~~
gmake[2]: *** [CMakeFiles/lane_tracking_node.dir/build.make:76: CMakeFiles/lane_tracking_node.dir/src/lane_tracking_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:195: CMakeFiles/lane_tracking_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake[2]: *** [CMakeFiles/lane_marking_node.dir/build.make:76: CMakeFiles/lane_marking_node.dir/src/lane_marking_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:169: CMakeFiles/lane_marking_node.dir/all] Error 2
[ 77%] Linking CXX executable obstacle_detection_node
[ 77%] Built target obstacle_detection_node
gmake: *** [Makefile:146: all] Error 2
